small fixes on the code and align the black keys in piano page

--- a/src/css/pianoPage.css
+++ b/src/css/pianoPage.css
@@ -133,15 +133,15 @@ body {
 /* Alineando las teclas negras de ambas octavas */
 .black-key:nth-child(1) { left: 45px; }  /* Do# */
 .black-key:nth-child(2) { left: 115px; }  /* Re# */
-.black-key:nth-child(3) { left: 260px; } /* Fa# */
-.black-key:nth-child(4) { left: 335px; } /* Sol# */
-.black-key:nth-child(5) { left: 405px; } /* La# */
+.black-key:nth-child(3) { left: 255px; } /* Fa# */
+.black-key:nth-child(4) { left: 325px; } /* Sol# */
+.black-key:nth-child(5) { left: 395px; } /* La# */
 /* Segunda octava */
-.black-key:nth-child(6) { left: 550px; } /* Do# */
-.black-key:nth-child(7) { left: 620px; } /* Re# */
-.black-key:nth-child(8) { left: 765px; } /* Fa# */
-.black-key:nth-child(9) { left: 840px; } /* Sol# */
-.black-key:nth-child(10) { left: 910px; } /* La# */
+.black-key:nth-child(6) { left: 535px; } /* Do# */
+.black-key:nth-child(7) { left: 605px; } /* Re# */
+.black-key:nth-child(8) { left: 745px; } /* Fa# */
+.black-key:nth-child(9) { left: 815px; } /* Sol# */
+.black-key:nth-child(10) { left: 885px; } /* La# */
 
 @media (max-width: 768px) {
     .content {
